# artfolio-creative-showcase-backend

./: API_DOCUMENTATION.md  README.md  artfolio_postman_collection.json  blueprint.md  goal.md  main.py  pyproject.toml  text.py
api/: deps.py
api/v1/: api.py
api/v1/endpoints/: account.py  artworks.py  auth.py  users.py
core/: cloud.py  config.py  utils.py
db/: mongodb.py
mock_data/: populate_db.py
models/: artwork.py  user.py
schemas/: artwork.py  token.py  user.py
templates/: index_jinja.html
tests/: conftest.py  test_artworks.py  test_auth.py  test_users.py
