[project]
name = "artfolio-backend"
version = "0.1.0"
description = "ArtFolio Creative Showcase Backend API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudinary>=1.44.1",
    "fastapi>=0.127.1",
    "pymongo>=4.6.3",
    "python-multipart>=0.0.21",
    "pyjwt>=2.10.1",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.7.1",
    "beanie>=2.0.1",
    "motor>=3.7.1",
    "uvicorn[standard]>=0.40.0",
    "email-validator>=2.3.0",
    "passlib>=1.7.4",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.6",
    "bcrypt>=5.0.0",
    "jinja2>=3.1.6",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.1.1",
    "httpx==0.27.0",
    "pytest-asyncio==0.23.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "db", "models", "routers", "services"]
